# Fnaf_Clone

./: CMakeLists.txt  README.md
src/: Animatronics.hpp  main.cpp  mainmenu.cpp  mainmenu.h  mainoffice.cpp  mainoffice.h
